@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.1
+Release: 0.2
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -577,6 +577,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Mon Apr 10 2006 Jeff Johnson <jbj@jbj.org> 4.4.7-0.2
+- fix: build error msg had reversed args.
+
 * Sun Apr  9 2006 Jeff Johnson <jbj@jbj.org> 4.4.7-0.1
 - start 4.4.7 development.
 - use zlib's unrolled crc-32 and adler32, add crc-64, checksums.
